using java modules for jlink + small docker image